# TrialsHD

./: .gitignore  BUILD.txt  CMakeLists.txt  README.md  README.txt  TODO.txt  compile_flags.txt  create_missing_directories.sh  external.cmake  gameinfo.txt  global.cmake  libs.cmake  setup.cmake  tools.cmake
code/engine/: actor.cpp  actorinfo.hpp  camera.cpp  camera.hpp  gfx.hpp  model.hpp  package.hpp  packagexml.cpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  texture.cpp  video.cpp  xgs.cpp  xml.cpp  xml.hpp  xsb.cpp  xus.cpp
code/game/: app.cpp  app.hpp  main.cpp  texture.cpp  texture.hpp  track.cpp  track.hpp  xur.cpp  xur.hpp
code/shared/: build_defines.hpp  lib.cpp  math.cpp  math.hpp  memory.cpp  memory.hpp  timer.cpp  timer.hpp  util.hpp
code/tools/: be_util.hpp  gfx_tool.cpp  tex_tool.cpp  texture_tool.cpp  track.cpp  track.hpp  track_tool.cpp  xur_tool.cpp  xus_tool.cpp
data/: .gitignore  README.txt  config.xml  gameinfo.xml
data/Xui/: continue_challenge_screen.xur  credits.xur  custom_tracks_friend_menu.xur  custom_tracks_get_menu.xur  custom_tracks_manage_menu.xur  custom_tracks_menu.xur  custom_tracks_play_menu.xur  custom_tracks_publish_menu.xur  custom_tracks_share_menu.xur  editor.xur  editor_help_menu.xur  editor_load.xur  editor_menu.xur  editor_save.xur  finish_medal.xur  gear_menu.xur  help_options_controls_menu.xur  help_options_credits_menu.xur  help_options_howtoplay_menu.xur  help_options_menu.xur  help_options_settings_menu.xur  in_game.xur  leaderboard_challenges_highscores_menu.xur  leaderboard_challenges_menu.xur  leaderboard_global_menu.xur  leaderboard_track_highscores_menu.xur  leaderboard_track_menu.xur  leaderboard_type_menu.xur  loading.xur  main_menu.xur  message_menu.xur  message_popup_menu.xur  message_popup_scroll_menu.xur  notification.xur  pause_menu.xur  playgame_difficulty_menu.xur  playgame_selectbike_menu.xur  playgame_selectchallenge_menu.xur  playgame_selectskillgame_menu.xur  playgame_selecttrack_menu.xur  (+4 more)
data/bikes/: bike.xml  bike_beginner.xml  bike_easy.xml  bike_hard.xml  bike_harley.xml  bike_reverse.xml  bike_ski.xml  bike_with_cart.xml
data/dump/: bike_easy_gear.txt  bike_hard_gear.txt  bike_harley.txt  bike_with_cart_gear.txt
data/effects/: score_effect.xml
data/main/: bike.gfx  bike_beginner_gear.gfx  bike_hard.gfx  bike_hard_gear.gfx  bike_monkey_gear.gfx  bike_reverse.gfx  bike_ski.gfx  bike_ski_gear.gfx  bike_tank.gfx
data/objects/: WWII_bomb.xml  air_condenser_1.xml  air_condenser_small_1.xml  big_barrel_1.xml  boost_turbo.xml  bowl_cone.xml  car_police_1.xml  car_tire.xml  concrete_block.xml  concrete_pipe.xml  concrete_pipe_curve.xml  crash_goal_1.xml  crash_target_1.xml  crash_target_2.xml  crash_target_after_burner.xml  delivery_bomb.xml  dynamite_box.xml  electricity_cabinet.xml  error.xml  fatman.xml  flipper_small.xml  flipper_wide.xml  game_fire_ring.xml  game_metal_barrel_1.xml  giant_iron_ball.xml  giant_iron_ball_inside.xml  glass_1.xml  glass_score_1.xml  glass_score_2.xml  glass_score_3.xml  glass_score_4.xml  i_beam.xml  lamp_wall_1.xml  log_big_rounded.xml  log_big_rounded_short.xml  log_big_square.xml  log_big_square_short.xml  log_rounded.xml  log_square.xml  metal_barrel_1.xml  (+67 more)
data/pack0/: challenges.xml  gear.xml  objects.xml  tracks.xml
data/packinfo/: pack0.xml
data/raw/: bike.xml  bike_beginner.xml  bike_beginner_gear.xml  bike_easy.xml  bike_easy_gear.xml  bike_gear.xml  bike_hard.xml  bike_hard_gear.xml  bike_harley.xml  bike_monkey_gear.xml  bike_reverse.xml  bike_reverse_gear.xml  bike_ski.xml  bike_ski_gear.xml  bike_tank.xml  bike_with_cart.xml  bike_with_cart_gear.xml
data/scenes/: driver.actor.xml
data/shaders/: NBlightend.inc  NBlightendFog.inc  NBlightstart.inc  NBlightstartADD.inc  NBpointlight.inc  NBspotlight.inc  aoVolume.fx  aoVolume.sd  blur4x4.fx  blur4x4.sd  border.fx  border.sd  bufferCopy.fx  bufferCopy.sd  cacheResolve.fx  cacheResolve.sd  clipper.fx  clipper.sd  depthRestore.fx  depthRestore.sd  depthRestoreFast.fx  depthRestoreFast.sd  downSample2x2.fx  downSample2x2.sd  downSample4x4.fx  downSample4x4.sd  downSample5x3.fx  downSample5x3.sd  flat.fx  flat.sd  geometry.fx  geometry.sd  geometryGhost.fx  geometryGhost.sd  geometryGhostSkinned.fx  geometryGhostSkinned.sd  geometryParallax.fx  geometryParallax.sd  geometryParallaxClip.fx  geometryParallaxClip.sd  (+110 more)
data/tracks/: track0.trk  track101.trk  track108.trk  track111.trk  track14.trk  track16.trk  track203.trk  track25.trk  track26.trk  track36.trk  track7.trk
data_dlc/big_thrills_prototype/: pack3.xus
data_dump/tracks/: track1.txt  track10.txt  track102.txt  track103.txt  track104.txt  track106.txt  track107.txt  track109.txt  track11.txt  track111.txt  track113.txt  track15.txt  track16.txt  track17.txt  track18.txt  track19.txt  track203.txt  track204.txt  track205.txt  track206.txt  track207.txt  track209.txt  track21.txt  track211.txt  track212.txt  track213.txt  track214.txt  track22.txt  track300.txt  track303.txt  track305.txt  track34.txt  track35.txt  track36.txt  track38.txt  track39.txt  track4.txt  track400.txt  track453.txt  track6.txt  (+3 more)
data_july/Xui/: continue_challenge_screen.xur  help_options_credits_menu.xur  in_game.xur  leaderboard_challenges_menu.xur  leaderboard_track_menu.xur
data_july/bikes/: bike_reverse.xml  bike_ski.xml
data_july/objects/: air_condenser_1.xml  concrete_block.xml  fatman.xml  i_beam.xml  log_big_rounded.xml  log_big_rounded_short.xml  log_square.xml  ramp_metal_plate_small.xml  scaffold_base.xml  traffic_sign_single_post.xml  tranpoline_1.xml  wooden_platform.xml  wooden_wall.xml  wooden_wall_plank.xml
data_july/packinfo/: pack0.xml
data_july/shaders/: NBlightstart.inc  aoVolume.fx  border.fx  bufferCopy.fx  clipper.sd  (+24 more)
data_may/: config.xml
docs/: GfxFile.md  TexFile.md  TrackFile.md  XurFile.md  XusFile.md  extern.txt  ignored_files.txt  tech_info.txt  thd.xex_dump.txt
dump/: bike_beginner.txt  bike_gear.txt  bike_monkey.txt  bike_reverse.txt  bike_ski.txt  bike_tank.txt  bike_with_cart.txt
tools/: thd_may11_2009.xex_dump.txt
(+5800 files in other folders)
